another fix for training schedule on small screen - even smaller font size and 2nd &shy in "Mannschaftstraining"

--- a/styles/output.css
+++ b/styles/output.css
@@ -1146,6 +1146,11 @@ select {
     line-height: 1.75rem
 }
 
+.text-xs {
+    font-size: .75rem;
+    line-height: 1rem
+}
+
 .font-bold {
     font-weight: 700
 }
